--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,53 @@ h1{
     margin-left: 2rem;
     margin-top: 3rem
 }
+
+.contact-me{
+    text-align: center;
+
+}
+
+.btn {
+    background: #34d98c;
+    background-image: -webkit-linear-gradient(top, #34d98c, #2980b9);
+    background-image: -moz-linear-gradient(top, #34d98c, #2980b9);
+    background-image: -ms-linear-gradient(top, #34d98c, #2980b9);
+    background-image: -o-linear-gradient(top, #34d98c, #2980b9);
+    background-image: linear-gradient(to bottom, #34d98c, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 1rem;
+  }
+  
+  .btn:hover {
+    background: #3cfcef;
+    background-image: -webkit-linear-gradient(top, #3cfcef, #3498db);
+    background-image: -moz-linear-gradient(top, #3cfcef, #3498db);
+    background-image: -ms-linear-gradient(top, #3cfcef, #3498db);
+    background-image: -o-linear-gradient(top, #3cfcef, #3498db);
+    background-image: linear-gradient(to bottom, #3cfcef, #3498db);
+    text-decoration: none;
+  }
+  .bottom-container{
+      background-color: #b22222;
+      padding: 2rem 0;
+
+  }
+  .bottom-container a {
+        display: inline-block;
+        text-decoration: none;
+        margin: 1.5rem 1.5rem;
+        color: #ffffff
+  }
+
+  .bottom-container a:hover {
+      color: var(--dark-color)
+  }
